--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -10,7 +10,7 @@
 			ID: {{ artist.id }}
 		</p>
 		<div class="genres">
-			{% for genre in artist.genres %}
+                        {% for genre in artist.genres[1:-1].split(',') %}
 			<span class="genre">{{ genre }}</span>
 			{% endfor %}
 		</div>
