--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -40,10 +40,7 @@
         <p class="not-seeking">
             <i class="fas fa-moon"></i> Not currently seeking talent
         </p>
-        {% endif %}
-                <form method="get" action="/venues/{{ venue.id }}/delete">
-               <input type="submit" value="Delete Venue" class="btn btn-primary btn-lg btn-block">
-                </form>   
+        {% endif %}  
     </div>
     <div class="col-sm-6">
         <img src="{{ venue.image_link }}" alt="Venue Image" />
@@ -79,5 +76,6 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
-
+<a href="/venues/{{ venue.id }}/delete"><button class="btn btn-danger btn-lg">Delete</button></a>
+</form> 
 {% endblock %}
